--- a/agents-docs/content/docs/typescript-sdk/tools/credentials.mdx
+++ b/agents-docs/content/docs/typescript-sdk/tools/credentials.mdx
@@ -30,7 +30,7 @@ The framework supports three credential store types, each suited for different a
 
 
 ### Nango Store
-**Common use case**: OAuth tokens from OAuth2.1/PKCE flows, complex OAuth flows, integrating with external services (Slack, GitHub, Google, etc.), when extra headers are needed, etc. Credentials configured through Visual Builder.
+**Common use case**: OAuth tokens from OAuth2.1/PKCE flows, complex OAuth flows, integrating with external services (Slack, GitHub, Google, etc.), when extra headers are needed, etc. Credentials are configured through Visual Builder.
 
 - Managed through Nango (self-hosted or cloud). Follow steps to [setup Nango](/get-started/credentials).
 - Supports various authentication methods: OAuth2.0, API keys, basic auth, and more
