--- a/agents-docs/content/docs/typescript-sdk/tools/create-mcp-servers.mdx
+++ b/agents-docs/content/docs/typescript-sdk/tools/create-mcp-servers.mdx
@@ -12,13 +12,9 @@ The fastest way to get started is by connecting to existing MCP servers provided
 
 ### MCPs with OAuth 2.1/PKCE support
 
-These servers often implement OAuth 2.1 with PKCE for secure authentication that allow for "1-click" authentication without the need to manually create API keys or credentials.
-
-The credential for these servers is created automatically when you click the "Click to Login" button in the Visual Builder. It will be saved to your [Nango Store](/typescript-sdk/tools/credentials#nango-store) (follow steps to [setup Nango](/get-started/credentials)). If Nango is not set up, the framework will use the [Keychain Store](/typescript-sdk/tools/credentials#keychain-store) if available.
+These servers often implement OAuth 2.1 with PKCE for secure authentication that allow for `1-click` authentication without the need for API keys.
 
 <Snippet file="mcp/popular-oauth-servers.mdx" />
-
-To add them to your Inkeep Project, use the [Visual Builder](/visual-builder/tools/mcp-servers).
 
 ## Build Your Own
 
