--- a/agents-docs/content/docs/overview.mdx
+++ b/agents-docs/content/docs/overview.mdx
@@ -7,16 +7,6 @@ description: Inkeep is a platform for building Agent-driven AI Chat Assistants a
 
 With Inkeep, you can build and ship AI Agents with a **No-Code Visual Builder** or **TypeScript SDK**. Agents can be edited in code or no-code with **full 2-way sync**, so technical and non-technical teams can create and manage their Agents in a single platform.
 
-## Agentic Chat Assistants
-Inkeep Agents can operate as conversational assistants, for example:
-- a customer experience agent for help centers, technical docs, or in-app experiences
-- an internal copilot to assist your support, sales, marketing, ops, and other teams
-
-## Agentic Workflows
-Agents can also be used for workflow automation like:
-- Creating and updating knowledge bases, documentation, and blogs
-- Updating CRMs, triaging helpdesk tickets, and tackling repetitive tasks
-
 ## Two ways to build
 
 ### No-Code Visual Builder
@@ -54,6 +44,15 @@ A code-first approach for building and managing multi-agent systems. Engineering
    ```
 
 The **Visual Builder and TypeScript SDK are fully interoperable**: your technical and non-technical teams can edit and manage Agents in either format and switch or collaborate with others at any time.
+
+## Use cases
+Inkeep Agents can operate as **Agentic Chat Assistants**, for example:
+- a customer experience agent for help centers, technical docs, or in-app experiences
+- an internal copilot to assist your support, sales, marketing, ops, and other teams
+
+Agents can also be used for Agentic Workflow Automation like:
+- Creating and updating knowledge bases, documentation, and blogs
+- Updating CRMs, triaging helpdesk tickets, and tackling repetitive tasks
 
 ## Platform Overview
 
