fix: correct grammar in quick-start and popular-oauth-servers docs

--- a/agents-docs/_snippets/mcp/popular-oauth-servers.mdx
+++ b/agents-docs/_snippets/mcp/popular-oauth-servers.mdx
@@ -18,4 +18,4 @@ To add them to your project:
 2. Click on **New MCP Server**
 3. Choose from the preset list under **Popular Services** or register any under **Custom Server**
 
-When register the server, an authentication pop-up will appear and allow you to sign in. Your credentials will automatically be saved to your [Nango Store](/typescript-sdk/tools/credentials#nango-store) or [Keychain](/typescript-sdk/tools/credentials#keychain-store) credential store.
+When you register the server, an authentication pop-up will appear and allow you to sign in. Your credentials will automatically be saved to your [Nango Store](/typescript-sdk/tools/credentials#nango-store) or [Keychain](/typescript-sdk/tools/credentials#keychain-store) credential store.
