--- a/agents-docs/content/docs/get-started/quick-start.mdx
+++ b/agents-docs/content/docs/get-started/quick-start.mdx
@@ -50,7 +50,7 @@ Navigate to the Event Planner agent at http://localhost:3000, click **Try it**, 
 
 ### Step 4: Install Inkeep MCP (optional)
 
-To help with development, add the `Inkeep Agents MCP` to your preferred IDE or MCP client. It has a tools to help "vibe code" agents with the Inkeep SDK.
+To help with development, add the `Inkeep Agents MCP` to your preferred IDE or MCP client. It has tools to help "vibe code" agents with the Inkeep SDK.
 
 <div style={{ display: 'flex', flexDirection: 'row', alignItems: 'center', gap: '16px' }}>
   <a href="cursor://anysphere.cursor-deeplink/mcp/install?name=inkeep-agents&config=eyJ1cmwiOiJodHRwczovL2FnZW50cy5pbmtlZXAuY29tL21jcCJ9">
