--- a/agents-docs/content/docs/overview.mdx
+++ b/agents-docs/content/docs/overview.mdx
@@ -50,7 +50,7 @@ Inkeep Agents can operate as **Agentic Chat Assistants**, for example:
 - a customer experience agent for help centers, technical docs, or in-app experiences
 - an internal copilot to assist your support, sales, marketing, ops, and other teams
 
-Agents can also be used for Agentic Workflow Automation like:
+Agents can also be used for **Agentic Workflow Automation** like:
 - Creating and updating knowledge bases, documentation, and blogs
 - Updating CRMs, triaging helpdesk tickets, and tackling repetitive tasks
 
