--- a/agents-docs/content/docs/overview.mdx
+++ b/agents-docs/content/docs/overview.mdx
@@ -11,7 +11,7 @@ With Inkeep, you can build and ship AI Agents with a **No-Code Visual Builder** 
 
 ### No-Code Visual Builder
 
-A no-code canvas designed to allow any team to create and manage teams of Agents with an approachable drag-and-drop UI.
+A no-code canvas designed to allow any team to create and manage teams of Agents with a drag-and-drop UI.
 
 <img
   src="/gifs/drag-n-drop.gif"
@@ -65,13 +65,13 @@ Agents can also be used for **Agentic Workflow Automation** like:
 - Observability via a Traces UI & OpenTelemetry
 - Easy deployment to Vercel and using Docker
 
-If you'd like a managed platform, check out the [Inkeep Cloud Waitlist](https://inkeep.com/cloud-waitlist) or [Inkeep Enterprise](https://inkeep.com/enterprise).
+If you'd like a managed platform, sign up for the [Inkeep Cloud waitlist](https://inkeep.com/cloud-waitlist) or learn about [Inkeep Enterprise](https://inkeep.com/enterprise).
 
 ## Our Approach
 
 Inkeep is designed to be extensible and open: you can use the LLM provider of your choice, use Agents via open protocols, and with a [fair-code](/community/license) license and great devex, easily deploy and self-host Agents in your own infra.
 
-[Join our community](/community/inkeep-community) to stay up to date and get support.
+[Follow us](https://docs.inkeep.com/community/inkeep-community) to stay up to date, get help, and share feedback.
 
 ## Next Steps
 
