--- a/agents-docs/content/docs/self-hosting/aws-ec2.mdx
+++ b/agents-docs/content/docs/self-hosting/aws-ec2.mdx
@@ -2,7 +2,7 @@
 title: Deploy to AWS EC2
 sidebarTitle: AWS EC2
 description: Deploy to AWS EC2 with Docker Compose
-icon: "brand/DockerIcon"
+icon: "LuServerCog"
 ---
 
 ## Coming soon
