--- a/agents-docs/content/docs/self-hosting/docker-build.mdx
+++ b/agents-docs/content/docs/self-hosting/docker-build.mdx
@@ -2,7 +2,7 @@
 title: Build a Custom Docker Image
 sidebarTitle: Custom Image
 description: How to build your own Docker images
-icon: "brand/DockerIcon"
+icon: "LuWrench"
 ---
 
 ## Coming soon
