--- a/agents-docs/content/docs/self-hosting/docker-local.mdx
+++ b/agents-docs/content/docs/self-hosting/docker-local.mdx
@@ -1,7 +1,7 @@
 ---
 title: Deploy using Docker (Local Development)
 sidebarTitle: Local Development
-icon: "brand/DockerIcon"
+icon: "LuLaptop"
 ---
 
 ## Install Docker
