--- a/agents-docs/content/docs/self-hosting/gcp-compute-engine.mdx
+++ b/agents-docs/content/docs/self-hosting/gcp-compute-engine.mdx
@@ -2,7 +2,7 @@
 title: Deploy to GCP Compute Engine
 sidebarTitle: GCP Compute Engine
 description: Deploy to GCP Compute Engine with Docker Compose
-icon: "brand/DockerIcon"
+icon: "LuCloudSun"
 ---
 
 ## Create a VM Instance
