--- a/agents-docs/content/docs/overview.mdx
+++ b/agents-docs/content/docs/overview.mdx
@@ -1,11 +1,11 @@
 ---
-title: Build AI Agents in Code + No-Code
+title: No-Code Agent Builder + Agents SDK
 sidebarTitle: Overview
 icon: "LuBookOpen"
 description: Inkeep is a platform for building Agent-driven AI Chat Assistants and AI Workflows.
 ---
 
-With Inkeep, you can build and ship AI Agents with a **No-Code Visual Builder** or **TypeScript SDK**. Agents can be edited in code or no-code with **full 2-way sync**, so technical and non-technical teams can create and manage their Agents in a single platform.
+With Inkeep, you can build AI Agents with a **No-Code Visual Builder** and **TypeScript SDK**. Agents can be edited in either with **full 2-way sync**, so technical and non-technical teams can create and manage their Agents in one platform.
 
 ## Two ways to build
 
@@ -76,7 +76,7 @@ Inkeep is designed to be extensible and open: you can use the LLM provider of yo
 ## Next Steps
 
 <Cards>
-  <Card title="Follow the Quick Start" icon="LuZap" href="/quick-start">
+  <Card title="Follow the Quick Start" icon="LuZap" href="/get-started/quick-start">
     Get started with the Visual Builder and TypeScript SDK in under 5 minutes.
   </Card>
   <Card title="Conceptual Overview" icon="LuLightbulb" href="/concepts">
