--- a/agents-docs/content/docs/overview.mdx
+++ b/agents-docs/content/docs/overview.mdx
@@ -11,7 +11,7 @@ With Inkeep, you can build AI Agents with a **No-Code Visual Builder** and **Typ
 
 ### No-Code Visual Builder
 
-A no-code canvas designed to allow any team to create and manage teams of Agents with a drag-and-drop UI.
+A no-code canvas so any team can create and own the Agents they care about. 
 
 <img
   src="/gifs/drag-n-drop.gif"
@@ -22,7 +22,7 @@ A no-code canvas designed to allow any team to create and manage teams of Agents
 
 ### TypeScript Agents SDK
 
-A code-first approach for building and managing multi-agent systems. Engineering teams can build with the tools and developer experience they expect.
+A code-first framework so engineering teams can build with the tools they expect.
 
    ```typescript
    import { agent, subAgent } from "@inkeep/agents-sdk";
@@ -65,7 +65,7 @@ Agents can also be used for **Agentic Workflow Automation** like:
 - Observability via a Traces UI & OpenTelemetry
 - Easy deployment to Vercel and using Docker
 
-If you'd like a managed platform, sign up for the [Inkeep Cloud waitlist](https://inkeep.com/cloud-waitlist) or learn about [Inkeep Enterprise](https://inkeep.com/enterprise).
+Interested in a managed platform? Sign up for the [Inkeep Cloud waitlist](https://inkeep.com/cloud-waitlist) or learn about [Inkeep Enterprise](https://inkeep.com/enterprise).
 
 ## Our Approach
 
