--- a/agents-docs/content/docs/overview.mdx
+++ b/agents-docs/content/docs/overview.mdx
@@ -1,17 +1,17 @@
 ---
-title: Build AI Agents in Code + No-Code
+title: No-Code Agent Builder + Agents SDK
 sidebarTitle: Overview
 icon: "LuBookOpen"
 description: Inkeep is a platform for building Agent-driven AI Chat Assistants and AI Workflows.
 ---
 
-With Inkeep, you can build and ship AI Agents with a **No-Code Visual Builder** or **TypeScript SDK**. Agents can be edited in code or no-code with **full 2-way sync**, so technical and non-technical teams can create and manage their Agents in a single platform.
+With Inkeep, you can build AI Agents with a **No-Code Visual Builder** and **TypeScript SDK**. Agents can be edited in either with **full 2-way sync**, so technical and non-technical teams can create and manage their Agents in one platform.
 
 ## Two ways to build
 
 ### No-Code Visual Builder
 
-A no-code canvas designed to allow any team to create and manage teams of Agents with a drag-and-drop UI.
+A no-code canvas so any team can create and own the Agents they care about. 
 
 <img
   src="/gifs/drag-n-drop.gif"
@@ -22,7 +22,7 @@ A no-code canvas designed to allow any team to create and manage teams of Agents
 
 ### TypeScript Agents SDK
 
-A code-first approach for building and managing multi-agent systems. Engineering teams can build with the tools and developer experience they expect.
+A code-first framework so engineering teams can build with the tools they expect.
 
    ```typescript
    import { agent, subAgent } from "@inkeep/agents-sdk";
@@ -65,7 +65,7 @@ Agents can also be used for **Agentic Workflow Automation** like:
 - Observability via a Traces UI & OpenTelemetry
 - Easy deployment to Vercel and using Docker
 
-If you'd like a managed platform, sign up for the [Inkeep Cloud waitlist](https://inkeep.com/cloud-waitlist) or learn about [Inkeep Enterprise](https://inkeep.com/enterprise).
+Interested in a managed platform? Sign up for the [Inkeep Cloud waitlist](https://inkeep.com/cloud-waitlist) or learn about [Inkeep Enterprise](https://inkeep.com/enterprise).
 
 ## Our Approach
 
@@ -76,7 +76,7 @@ Inkeep is designed to be extensible and open: you can use the LLM provider of yo
 ## Next Steps
 
 <Cards>
-  <Card title="Follow the Quick Start" icon="LuZap" href="/quick-start">
+  <Card title="Follow the Quick Start" icon="LuZap" href="/get-started/quick-start">
     Get started with the Visual Builder and TypeScript SDK in under 5 minutes.
   </Card>
   <Card title="Conceptual Overview" icon="LuLightbulb" href="/concepts">
