--- a/agents-docs/content/docs/get-started/credentials.mdx
+++ b/agents-docs/content/docs/get-started/credentials.mdx
@@ -13,7 +13,7 @@ There are multiple ways to manage credentials for your agents, each with differe
 3. **Environment Variables**: Simple SDK-based approach using environment variables
 4. **Keychain**: Secure local storage using your operating system's credential manager
 
-## Option 1: Nango cloud setup
+## Option 1: Nango Cloud setup
 
 ### Step 1: Create a Nango account
 
