--- a/agents-docs/content/docs/self-hosting/vercel.mdx
+++ b/agents-docs/content/docs/self-hosting/vercel.mdx
@@ -56,7 +56,7 @@ NANGO_SERVER_URL=https://api.nango.dev
 | `INKEEP_AGENTS_MANAGE_API_BYPASS_SECRET` | Run `openssl rand -hex 32` in your terminal to generate this value. Save this value for `INKEEP_AGENTS_MANAGE_API_BYPASS_SECRET` in Step 7.                        |
 | `TURSO_DATABASE_URL`                     | Turso database URL you saved from Step 3                                                                                                                           |
 | `TURSO_AUTH_TOKEN`                       | Turso auth token you saved from Step 3                                                                                                                             |
-| `NANGO_SECRET_KEY`                       | Nango secret key from your [Nango cloud account](/get-started/credentials#option-1-nango-cloud-setup). Note: Local Nango setup won't work with Vercel deployments. |
+| `NANGO_SECRET_KEY`                       | Nango secret key from your [Nango Cloud account](/get-started/credentials#option-1-nango-cloud-setup). Note: Local Nango setup won't work with Vercel deployments. |
 | `NANGO_SERVER_URL`                       | `https://api.nango.dev`                                                                                                                                            |
 
 ### Step 6: Create a Vercel project for Run API
@@ -98,7 +98,7 @@ NANGO_SERVER_URL=https://api.nango.dev
 | `INKEEP_AGENTS_RUN_API_BYPASS_SECRET` | Run `openssl rand -hex 32` in your terminal to generate this value. Save this value for `INKEEP_AGENTS_RUN_API_BYPASS_SECRET` in Step 7.                                                                                                   |
 | `TURSO_DATABASE_URL`                  | Turso database URL you saved from Step 3                                                                                                                                                                                                   |
 | `TURSO_AUTH_TOKEN`                    | Turso auth token you saved from Step 3                                                                                                                                                                                                     |
-| `NANGO_SECRET_KEY`                    | Nango secret key from your [Nango cloud account](/get-started/credentials#option-1-nango-cloud-setup). Note: Local Nango setup won't work with Vercel deployments.                                                                         |
+| `NANGO_SECRET_KEY`                    | Nango secret key from your [Nango Cloud account](/get-started/credentials#option-1-nango-cloud-setup). Note: Local Nango setup won't work with Vercel deployments.                                                                         |
 | `OTEL_EXPORTER_OTLP_TRACES_ENDPOINT`  | `https://ingest.us.signoz.cloud:443/v1/traces`                                                                                                                                                                                             |
 | `OTEL_EXPORTER_OTLP_TRACES_HEADERS`   | `signoz-ingestion-key=<your-ingestion-key>`. Use the instructions from [SigNoz Cloud Setup](/get-started/traces#option-1-signoz-cloud-setup) to configure your ingestion key. Note: Local SigNoz setup won't work with Vercel deployments. |
 | `NANGO_SERVER_URL`                    | `https://api.nango.dev`                                                                                                                                                                                                                    |
@@ -142,7 +142,7 @@ NANGO_SECRET_KEY=
 | `INKEEP_AGENTS_MANAGE_API_BYPASS_SECRET`     | Your generated Manage API bypass secret from Step 5                                                                                                                                            |
 | `PUBLIC_SIGNOZ_URL`                          | Use the instructions from [SigNoz Cloud Setup](/get-started/traces#option-1-signoz-cloud-setup) to configure your SigNoz URL. Note: Local SigNoz setup won't work with Vercel deployments.     |
 | `SIGNOZ_API_KEY`                             | Use the instructions from [SigNoz Cloud Setup](/get-started/traces#option-1-signoz-cloud-setup) to configure your SigNoz API key. Note: Local SigNoz setup won't work with Vercel deployments. |
-| `NANGO_SECRET_KEY`                           | Nango secret key from your [Nango cloud account](/get-started/credentials#option-1-nango-cloud-setup). Note: Local Nango setup won't work with Vercel deployments.                             |
+| `NANGO_SECRET_KEY`                           | Nango secret key from your [Nango Cloud account](/get-started/credentials#option-1-nango-cloud-setup). Note: Local Nango setup won't work with Vercel deployments.                             |
 | `PUBLIC_NANGO_SERVER_URL`                    | `https://api.nango.dev`                                                                                                                                                                        |
 | `PUBLIC_NANGO_CONNECT_BASE_URL`              | `https://connect.nango.dev`                                                                                                                                                                    |
 
