--- a/agents-docs/content/docs/troubleshooting.mdx
+++ b/agents-docs/content/docs/troubleshooting.mdx
@@ -33,15 +33,15 @@ This detailed error information helps you pinpoint exactly what went wrong and w
 
 <Snippet file="copy-trace.mdx" />
 
-## Step 2: Check Signoz
+## Step 2: Check SigNoz
 
-Signoz provides distributed tracing and observability for your agent system, offering deeper insights when the built-in timeline isn't sufficient.
+SigNoz provides distributed tracing and observability for your agent system, offering deeper insights when the built-in timeline isn't sufficient.
 
-### Accessing Signoz from the Timeline
+### Accessing SigNoz from the Timeline
 
-You can easily access Signoz directly from the timeline view. In the **Traces** section, click on any activity in the conversation timeline to view its details. Within the activity details, you'll find a **"View in Signoz"** button that takes you directly to the corresponding span in Signoz for deeper analysis.
+You can easily access SigNoz directly from the timeline view. In the **Traces** section, click on any activity in the conversation timeline to view its details. Within the activity details, you'll find a **"View in SigNoz"** button that takes you directly to the corresponding span in SigNoz for deeper analysis.
 
-### What Signoz Shows
+### What SigNoz Shows
 
 - **Distributed traces**: End-to-end request flows across services
 - **Performance metrics**: Response times, throughput, and error rates
