--- a/agents-docs/content/docs/typescript-sdk/signoz-usage.mdx
+++ b/agents-docs/content/docs/typescript-sdk/signoz-usage.mdx
@@ -3,7 +3,7 @@ title: Using SigNoz for Observability
 sidebarTitle: SigNoz Usage
 description: Complete guide to using SigNoz for observability, monitoring, and tracing in the Inkeep Agent Framework
 keywords: SigNoz, observability, monitoring, tracing, OpenTelemetry, APM, metrics
-icon: "brand/Signoz"
+icon: "brand/SigNoz"
 ---
 
 SigNoz is a full-stack observability platform that provides distributed tracing so that you can track requests across multiple agents and services.
