--- a/agents-docs/content/docs/typescript-sdk/langfuse-usage.mdx
+++ b/agents-docs/content/docs/typescript-sdk/langfuse-usage.mdx
@@ -55,11 +55,13 @@ export const defaultSDK = new NodeSDK({
 defaultSDK.start();
 ```
 
-> **Note:** Make sure to install the required dependencies in your run API directory:
-> ```bash
-> cd apps/run-api
-> pnpm add @opentelemetry/sdk-node @langfuse/otel
-> ```
+<Note>
+Make sure to install the required dependencies in your run API directory:
+```bash
+cd apps/run-api
+pnpm add @opentelemetry/sdk-node @langfuse/otel
+```
+</Note>
 
 #### What This Configuration Does
 
