--- a/agents-docs/content/docs/self-hosting/docker-build.mdx
+++ b/agents-docs/content/docs/self-hosting/docker-build.mdx
@@ -5,4 +5,10 @@ description: How to build your own Docker images
 icon: "LuWrench"
 ---
 
-## Coming soon
+If you created a project from the quick start, the template includes a set of Dockerfiles and `docker-compose.yml` files.
+
+To build and run locally:
+```
+docker compose build
+docker compose up -d
+```
