--- a/agents-docs/content/docs/self-hosting/hetzner.mdx
+++ b/agents-docs/content/docs/self-hosting/hetzner.mdx
@@ -1,35 +1,40 @@
 ---
-title: Deploy to AWS EC2
-sidebarTitle: AWS EC2
-description: Deploy to AWS EC2 with Docker Compose
+title: Deploy to Hetzner
+sidebarTitle: Hetzner
+description: Deploy to Hetzner with Docker Compose
 icon: "LuServerCog"
 ---
 
-## Create a VM Instance
+## Create a server
 
-- Go to [Compute Engine](https://console.aws.amazon.com/ec2/v2/home).
-- Launch an instance
-- Select Amazon Machine Image (AMI)
-- Recommended size is at least `t2.large` (2 vCPU, 8 GiB Memory).
-- Click "Edit" in the "Network settings" section. Set up an Inbound Security Group Rules for (TCP, 3000, 0.0.0.0/0), (TCP, 3002-3003, 0.0.0.0/0), (TCP, 3050-3051, 0.0.0.0/0), and (TCP, 3080, 0.0.0.0/0). These are the ports exposed by the Inkeep services.
-- Auto-assign public IP
-- Increase the size of storage to 30 GiB.
+- Create a server, recommended size is at least CPX32 (4 VCPUS, 8 GB RAM, >30 GB Storage)
+- Select Ubuntu 24.04 Image
+- Create an inbound firewall rule to allow TCP ports: 3000, 3002, 3003, 3050, 3051, and 3080. These are the ports exposed by the Inkeep services.
 
 ## Install Docker Compose
 
-1. SSH into the EC2 Instance
+1. SSH into the server as root
 
-2. Install packages
+2. [Set up Docker's apt repository](https://docs.docker.com/engine/install/ubuntu/#install-using-the-repository)
 ```bash
-sudo dnf update
-sudo dnf install -y git
-sudo dnf install -y docker
+# Add Docker's official GPG key:
+sudo apt-get update
+sudo apt-get install ca-certificates curl
+sudo install -m 0755 -d /etc/apt/keyrings
+sudo curl -fsSL https://download.docker.com/linux/ubuntu/gpg -o /etc/apt/keyrings/docker.asc
+sudo chmod a+r /etc/apt/keyrings/docker.asc
+
+# Add the repository to Apt sources:
+echo \
+  "deb [arch=$(dpkg --print-architecture) signed-by=/etc/apt/keyrings/docker.asc] https://download.docker.com/linux/ubuntu \
+  $(. /etc/os-release && echo "${UBUNTU_CODENAME:-$VERSION_CODENAME}") stable" | \
+  sudo tee /etc/apt/sources.list.d/docker.list > /dev/null
+sudo apt-get update
 ```
 
+3. Install the Docker packages
 ```bash
-sudo mkdir -p /usr/libexec/docker/cli-plugins
-sudo curl -SL https://github.com/docker/compose/releases/latest/download/docker-compose-linux-$(uname -m) -o /usr/libexec/docker/cli-plugins/docker-compose
-sudo chmod +x /usr/libexec/docker/cli-plugins/docker-compose
+sudo apt-get install docker-ce docker-ce-cli containerd.io docker-buildx-plugin docker-compose-plugin
 ```
 
 ## Deploy SigNoz and Nango
