Fix citation name

--- a/agents-docs/content/docs/visual-builder/structured-outputs/artifact-components.mdx
+++ b/agents-docs/content/docs/visual-builder/structured-outputs/artifact-components.mdx
@@ -85,7 +85,7 @@ For more details on how artifact data is streamed via the API, see [Data Artifac
 }
 ```
 
-Citation artifacts with that are named `citation` and have `title` and `url` preview fields are auto-rendered by Inkeep's widget in two ways:
+Citation artifacts that are named `citation` and have `title` and `url` preview fields are auto-rendered by Inkeep's widget in two ways:
 - **Inline footnotes**: Numbered references [1], [2], etc. appear inline with the response text
 - **Interactive cards**: Source cards with title, URL, and content appear below the response for detailed exploration
 
