--- a/agents-docs/content/docs/visual-builder/structured-outputs/status-components.mdx
+++ b/agents-docs/content/docs/visual-builder/structured-outputs/status-components.mdx
@@ -92,7 +92,7 @@ models: {
     model: 'openai/gpt-4.1-mini', // Dedicated summarizer
     providerOptions: {
       temperature: 0.3, // Lower temperature for consistent summaries
-      maxTokens: 1024
+      maxOutputTokens: 1024
     }
   }
 }
