--- a/agents-docs/content/docs/visual-builder/sub-agents.mdx
+++ b/agents-docs/content/docs/visual-builder/sub-agents.mdx
@@ -92,7 +92,7 @@ The following are configurable options for the Sub Agent through the Visual Buil
 | `description`         | string | No       | Brief description of the Sub Agent's purpose and capabilities                                                                |
 | `prompt`              | string | Yes      | Detailed behavior guidelines and system prompt for the Sub Agent                                                             |
 | `model`               | string | No       | AI model identifier (e.g., "anthropic/claude-sonnet-4-20250514"). Choose a model that you prefer                              |
-| `providerOptions`     | object | No       | Model-specific configuration options (temperature, maxTokens, etc.)                                                          |
+| `providerOptions`     | object | No       | Model-specific configuration options (temperature, maxOutputTokens, etc.)                                                          |
 | `Data components`     | object | No       | Data components that the Sub Agent can use. See [Data Components](/visual-builder/structured-outputs/data-components) for details               |
 | `Artifact components` | array  | No       | Artifact components that the Sub Agent can use. See [Artifact Components](/visual-builder/structured-outputs/artifact-components) for details   |
 
