--- a/agents-docs/content/docs/typescript-sdk/models.mdx
+++ b/agents-docs/content/docs/typescript-sdk/models.mdx
@@ -133,5 +133,5 @@ When using `inkeep init`, defaults are set based on your chosen provider:
 | Provider | Base | Structured Output | Summarizer |
 |----------|------|-------------------|------------|
 | **Anthropic** | `claude-sonnet-4-5` | `claude-sonnet-4-5` | `claude-sonnet-4-5` |
-| **OpenAI** | `gpt-4.1` | `gpt-4.1` | `gpt-4.1-nano` |
+| **OpenAI** | `gpt-4.1` | `gpt-4.1-mini` | `gpt-4.1-nano` |
 | **Google** | `gemini-2.5-flash` | `gemini-2.5-flash-lite` | `gemini-2.5-flash-lite` |
