--- a/agents-docs/content/docs/get-started/quick-start.mdx
+++ b/agents-docs/content/docs/get-started/quick-start.mdx
@@ -6,20 +6,7 @@ icon: "LuRocket"
 
 ## Launch your first agent
 
-<div style={{ position: "relative", paddingBottom: "56.25%", height: 0, overflow: "hidden", maxWidth: "100%", marginBottom: "20px" }}>
-  <iframe
-    src="https://www.youtube.com/embed/T7ZKQz7Y1-E"    
-    title="Quick Start with Inkeep Agents"
-    frameBorder="0"
-    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-    allowFullScreen
-    style={{ position: "absolute", top: 0, left: 0, width: "100%", height: "100%", borderRadius: "10px" }}
-  />
-</div>
-
-<p style={{ textAlign: "center", fontSize: "14px", color: "#666", marginTop: "-10px", marginBottom: "20px" }}>
-  <em>Visual guide to the Quick Start steps</em>
-</p>
+<YouTubeVideo videoId="T7ZKQz7Y1-E" title="Quick Start with Inkeep Agents" caption="Visual guide to the Quick Start steps" />
 
 ### Prerequisites
 
