--- a/agents-docs/content/docs/get-started/traces.mdx
+++ b/agents-docs/content/docs/get-started/traces.mdx
@@ -82,6 +82,8 @@ OTEL_EXPORTER_OTLP_TRACES_HEADERS="signoz-ingestion-key=<your-ingestion-key>"
 
 ## Option 2: Local SigNoz Setup
 
+<YouTubeVideo videoId="DWuL4AeRzAA" title="Local SigNoz Setup" caption="Visual guide to the Local SigNoz Setup steps" />
+
 ### Prerequisites
 
 - Docker installed on your machine
