used new project flag

--- a/agents-docs/content/docs/get-started/push-pull.mdx
+++ b/agents-docs/content/docs/get-started/push-pull.mdx
@@ -27,7 +27,7 @@ cd src/projects
 Add the docs assistant agent using `inkeep add`. 
 
 ```bash
-inkeep add docs-assistant
+inkeep add --project docs-assistant
 ```
 
 Find the downloaded code in `src/projects/docs-assistant`.
@@ -41,7 +41,7 @@ Find the downloaded code in `src/projects/docs-assistant`.
 Navigate to your docs assistant project.
 
 ```bash
-cd src/projects/docs-assistant
+cd docs-assistant
 ```
 
 Use `inkeep push` to push the code to the Visual Builder.
